--- a/SECCIONES/SECCION1/index.html
+++ b/SECCIONES/SECCION1/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
 
 </head>
 <body>
 
-    <script src="../SECCION1/app.js">
-
-</script>
+    
+    <script src="assets/js/app.js"></script>
+    <script src="assets/js/alerts.js"></script>
 </body>
 </html>
