--- a/SECCION3_DATOS-PRIMITIVOS/index.html
+++ b/SECCION3_DATOS-PRIMITIVOS/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/arreglos.js"></script> -->
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/arreglos2.js"></script> -->
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/ObjetosLiterales.js"></script> -->
-    <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/funciones.js"></script>
+    <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/funciones.js"></script> -->
+    <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/protip.js"></script>
 </body>
 </html>
