--- a/JS/SECCION4/assets/js/index.html
+++ b/JS/SECCION4/assets/js/index.html
@@ -7,13 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <button>presioname</button>
+    <h1>presioname</h1>
     <!-- <script src="/SECCIONES/SECCION3/assets/js/datosPrimitivos.jss"></script> -->
     <!-- <script src="/SECCIONES/SECCION3/assets/js/palabras-reservadas.js"></script> -->
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/arreglos.js"></script> -->
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/arreglos2.js"></script> -->
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/ObjetosLiterales.js"></script> -->
     <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/funciones.js"></script> -->
-    <script src="/SECCION4/assets/js/if-else.js"></script>
+    <!-- <script src="../js/Logicabooleano.js"></script> -->
+    <script src="../js/operador-ternario.js"></script>
 </body>
 </html>
