feat(js): :lock: new course

--- a/JS/SECCION4/assets/js/index.html
+++ b/JS/SECCION4/assets/js/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <button>presioname</button>
-    <!-- <script src="/SECCIONES/SECCION3/assets/js/datosPrimitivos.jss"></script> -->
-    <!-- <script src="/SECCIONES/SECCION3/assets/js/palabras-reservadas.js"></script> -->
-    <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/arreglos.js"></script> -->
-    <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/arreglos2.js"></script> -->
-    <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/ObjetosLiterales.js"></script> -->
-    <!-- <script src="/SECCION3_DATOS-PRIMITIVOS/assets/js/funciones.js"></script> -->
-    <script src="/SECCION4/assets/js/if-else.js"></script>
+    <!-- <script src="/SECCION4/assets/js/if-else.js"></script> -->
+    <!-- <script src="/SECCION4/assets/js/protip_ternario.js"></script> -->
+    <!-- <script src="/SECCION4/assets/js/switch.js"></script> -->
+    <!-- <script src="/SECCION4/assets/js/while-dowhile.js"></script> -->
+    <script src="/SECCION4/assets/js/for.js"></script>
+
 </body>
 </html>
